# ausrv-2016-task1

./: .gitignore  CMakeLists.txt  readme.txt
data/: S1_SHIFT_20ms_025_055_021.txt  S1_SPLIT_20ms_025_055_117.txt  S2_20ms_020_045_065.txt  задание1_распределение.xls
src/: Algorithm.cpp  Algorithm.h  Exceptions.h  Job.cpp  Job.h  JobWrapper.cpp  JobWrapper.h  Parser.cpp  Parser.h  Types.h  main.cpp
